--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,6 +22,9 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
+     if (project.android.hasProperty("namespace")) {
+        namespace 'xyz.justsoft.video_thumbnail'
+    }
     compileSdkVersion 33
 
     defaultConfig {
